# box-labeler

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cell.cpp  cell.h  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  multilinedelegate.cpp  multilinedelegate.h  pagewidget.cpp  pagewidget.h  previewwidget.cpp  previewwidget.h  printtask.cpp  printtask.h  queuewidget.cpp  queuewidget.h  resource.qrc  resource.rc  sheet.cpp  sheet.h  sheetwidget.cpp  sheetwidget.h
